--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">MobileDataCollectionSystem</string>
+    <string name="app_name">移动数据采集系统</string>
     <string name="title_section1">Section 1</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
+    <string name="title_purchase">采购</string>
+    <string name="title_produce">生产</string>
+    <string name="title_sall">销售</string>
+    <string name="title_warehouse">仓库</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_scan">扫描</string>
+    <string name="action_sync">同步</string>
+    <string name="action_settings">设置</string>
+    <string name="login_account_text">帐户:</string>
+    <string name="login_password_text">密码:</string>
+    <string name="login_remenber_text">记住密码</string>
+    <string name="login_button_text">登录</string>
 
 </resources>
